# esp32-simulator

./: .gitignore  .gitmodules  Dockerfile
docs/: _config.yml  index.md  nftables.rules
docs/assets/css/: style.scss
example/: CMakeLists.txt
example/main/: CMakeLists.txt  main.c
example/simulator/: CMakeLists.txt
src/: CMakeLists.txt  esp_err.c  esp_event.c  esp_heap_caps.c  esp_log.c  startup.c
src/freertos/: CMakeLists.txt
src/gui/: DisplayWidget.cpp  DisplayWidget.h  gui.pro  main.cpp
src/include/: esp_event.h  esp_event_private.h  esp_heap_caps.h
src/include/freertos/: FreeRTOS.h  StackMacros.h  event_groups.h  list.h  message_buffer.h  portable.h  portmacro.h  projdefs.h  queue.h  semphr.h  stack_macros.h  stream_buffer.h  task.h  timers.h
src/lwip/: CMakeLists.txt
src/lwip/extra/lwip/: sys.h
src/mbedtls/: CMakeLists.txt
