set(MBEDTLS_SOURCES
	"certs.c"
	"debug.c"
	"error.c"
	"Makefile"
	"net_sockets.c"
	"pkcs11.c"
	"ssl_cache.c"
	"ssl_ciphersuites.c"
	"ssl_cli.c"
	"ssl_cookie.c"
	"ssl_srv.c"
	"ssl_ticket.c"
	"ssl_tls.c"
	"version.c"
	"version_features.c"
	"x509.c"
	"x509_create.c"
	"x509_crl.c"
	"x509_crt.c"
	"x509_csr.c"
	"x509write_crt.c"
	"x509write_csr.c"
)
set(MBEDTLS_CRYPTO_SOURCES
	"aes.c"
	"aesni.c"
	"arc4.c"
	"aria.c"
	"asn1parse.c"
	"asn1write.c"
	"base64.c"
	"bignum.c"
	"blowfish.c"
	"camellia.c"
	"ccm.c"
	"cipher.c"
	"cipher_wrap.c"
	"cmac.c"
	"ctr_drbg.c"
	"des.c"
	"dhm.c"
	"ecdh.c"
	"ecdsa.c"
	"ecjpake.c"
	"ecp.c"
	"ecp_curves.c"
	"entropy.c"
	"entropy_poll.c"
	"error.c"
	"gcm.c"
	"havege.c"
	"hkdf.c"
	"hmac_drbg.c"
	"chachapoly.c"
	"chacha20.c"
	"md.c"
	"md2.c"
	"md4.c"
	"md5.c"
	"memory_buffer_alloc.c"
	"nist_kw.c"
	"oid.c"
	"padlock.c"
	"pem.c"
	"pk.c"
	"pkcs12.c"
	"pkcs5.c"
	"pkparse.c"
	"pk_wrap.c"
	"pkwrite.c"
	"platform.c"
	"platform_util.c"
	"poly1305.c"
	"psa_crypto.c"
	"psa_crypto_core.h"
	"psa_crypto_invasive.h"
	"psa_crypto_its.h"
	"psa_crypto_se.c"
	"psa_crypto_se.h"
	"psa_crypto_service_integration.h"
	"psa_crypto_slot_management.c"
	"psa_crypto_slot_management.h"
	"psa_crypto_storage.c"
	"psa_crypto_storage.h"
	"psa_its_file.c"
	"ripemd160.c"
	"rsa.c"
	"rsa_internal.c"
	"sha1.c"
	"sha256.c"
	"sha512.c"
	"threading.c"
	"timing.c"
	"version.c"
	"version_features.c"
	"xtea.c"
)
include_directories(
	"${CMAKE_CURRENT_SOURCE_DIR}/src/include"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/crypto/include"
)
list(TRANSFORM MBEDTLS_SOURCES PREPEND ${CMAKE_CURRENT_SOURCE_DIR}/src/library/)
list(TRANSFORM MBEDTLS_CRYPTO_SOURCES PREPEND ${CMAKE_CURRENT_SOURCE_DIR}/src/crypto/library/)
add_library(mbedtls STATIC
	${MBEDTLS_SOURCES}
	${MBEDTLS_CRYPTO_SOURCES}
)
